--- a/tests/unit/cassettes/no_secret.yaml
+++ b/tests/unit/cassettes/no_secret.yaml
@@ -9,45 +9,71 @@ interactions:
         Connection:
           - keep-alive
         User-Agent:
-          - pygitguardian/1.6.0 (Linux;py3.10.6)
+          - pygitguardian/1.17.0 (Linux;py3.11.8)
       method: GET
       uri: https://api.gitguardian.com/v1/metadata
     response:
       body:
-        string: '{"version":"v2.30.2","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"public_api__ggshield_auth_flow_enabled":true,"general__onboarding_segmentation_v1_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576}}'
+        string:
+          '{"version":"v2.117.1","preferences":{"marketplaces__aws_product_url":"http://aws.amazon.com/marketplace/pp/prodview-mrmulzykamba6","on_premise__restrict_signup":true,"on_premise__is_email_server_configured":true,"on_premise__default_sso_config_api_id":null,"on_premise__default_sso_config_force_sso":null,"onboarding__segmentation_v1_enabled":true,"general__maximum_payload_size":26214400,"general__mutual_tls_mode":"disabled","general__signup_enabled":true},"secret_scan_preferences":{"maximum_documents_per_scan":20,"maximum_document_size":1048576},"remediation_messages":{"pre_commit":">
+          How to remediate\n\n  Since the secret was detected before the commit was
+          made:\n  1. replace the secret with its reference (e.g. environment variable).\n  2.
+          commit again.\n\n> [Apply with caution] If you want to bypass ggshield (false
+          positive or other reason), run:\n  - if you use the pre-commit framework:\n\n    SKIP=ggshield
+          git commit -m \"<your message>\"\n    ","pre_push":"> How to remediate\n\n  Since
+          the secret was detected before the push BUT after the commit, you need to:\n  1.
+          rewrite the git history making sure to replace the secret with its reference
+          (e.g. environment variable).\n  2. push again.\n\n  To prevent having to rewrite
+          git history in the future, setup ggshield as a pre-commit hook:\n    https://docs.gitguardian.com/ggshield-docs/integrations/git-hooks/pre-commit\n\n>
+          [Apply with caution] If you want to bypass ggshield (false positive or other
+          reason), run:\n  - if you use the pre-commit framework:\n\n    SKIP=ggshield-push
+          git push","pre_receive":"> How to remediate\n\n  A pre-receive hook set server
+          side prevented you from pushing secrets.\n\n  Since the secret was detected
+          during the push BUT after the commit, you need to:\n  1. rewrite the git history
+          making sure to replace the secret with its reference (e.g. environment variable).\n  2.
+          push again.\n\n  To prevent having to rewrite git history in the future, setup
+          ggshield as a pre-commit hook:\n    https://docs.gitguardian.com/ggshield-docs/integrations/git-hooks/pre-commit\n\n>
+          [Apply with caution] If you want to bypass ggshield (false positive or other
+          reason), run:\n\n    git push -o breakglass"}}'
       headers:
         access-control-expose-headers:
           - X-App-Version
         allow:
           - GET, HEAD, OPTIONS
         content-length:
-          - '446'
+          - '2198'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Mon, 22 May 2023 12:28:06 GMT
+          - Fri, 15 Nov 2024 17:09:29 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
           - istio-envoy
         strict-transport-security:
           - max-age=31536000; includeSubDomains
+        transfer-encoding:
+          - chunked
         vary:
-          - Cookie
+          - Accept-Encoding,Cookie
         x-app-version:
-          - v2.30.2
+          - v2.117.1
         x-content-type-options:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '20'
+          - '39'
         x-frame-options:
           - DENY
           - SAMEORIGIN
+        x-sca-engine-version:
+          - 2.2.0
+        x-sca-last-vuln-fetch:
+          - '2024-11-15T15:07:15.159254+00:00'
         x-secrets-engine-version:
-          - 2.89.0
+          - 2.126.0
         x-xss-protection:
           - 1; mode=block
       status:
@@ -55,8 +81,8 @@ interactions:
         message: OK
   - request:
       body:
-        '[{"filename": "test", "document": "@@ -0,0 +1 @@\n+this is a patch without
-        secret\n"}]'
+        '[{"filename": "commit://patch/test", "document": "@@ -0,0 +1 @@\n+this
+        is a patch without secret\n"}]'
       headers:
         Accept:
           - '*/*'
@@ -65,11 +91,11 @@ interactions:
         Connection:
           - keep-alive
         Content-Length:
-          - '86'
+          - '101'
         Content-Type:
           - application/json
         GGShield-Command-Id:
-          - fdbdfaf6-617d-4801-b719-1369b24f1a8d
+          - ee3aab3d-4ef9-4a48-af4e-bef0f760eea3
         GGShield-Command-Path:
           - external
         GGShield-OS-Name:
@@ -77,33 +103,31 @@ interactions:
         GGShield-OS-Version:
           - '22.04'
         GGShield-Python-Version:
-          - 3.10.6
+          - 3.11.8
         GGShield-Version:
-          - 1.15.1
+          - 1.33.0
         User-Agent:
-          - pygitguardian/1.6.0 (Linux;py3.10.6)
+          - pygitguardian/1.17.0 (Linux;py3.11.8)
         mode:
           - path
       method: POST
-      uri: https://api.gitguardian.com/v1/multiscan?ignore_known_secrets=True
+      uri: https://api.gitguardian.com/v1/multiscan?ignore_known_secrets=True&all_secrets=True
     response:
       body:
-        string:
-          '[{"policy_break_count":0,"policies":["File extensions","Filenames","Secrets
-          detection"],"policy_breaks":[]}]'
+        string: '[{"policy_break_count":0,"policies":["Secrets detection"],"policy_breaks":[]}]'
       headers:
         access-control-expose-headers:
           - X-App-Version
         allow:
           - POST, OPTIONS
         content-length:
-          - '108'
+          - '78'
         content-type:
           - application/json
         cross-origin-opener-policy:
           - same-origin
         date:
-          - Mon, 22 May 2023 12:28:06 GMT
+          - Fri, 15 Nov 2024 17:09:31 GMT
         referrer-policy:
           - strict-origin-when-cross-origin
         server:
@@ -113,17 +137,21 @@ interactions:
         vary:
           - Cookie
         x-app-version:
-          - v2.30.2
+          - v2.117.1
         x-content-type-options:
           - nosniff
           - nosniff
         x-envoy-upstream-service-time:
-          - '66'
+          - '53'
         x-frame-options:
           - DENY
           - SAMEORIGIN
+        x-sca-engine-version:
+          - 2.2.0
+        x-sca-last-vuln-fetch:
+          - '2024-11-15T15:07:15.159254+00:00'
         x-secrets-engine-version:
-          - 2.89.0
+          - 2.126.0
         x-xss-protection:
           - 1; mode=block
       status:
