--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -17,6 +17,9 @@ on:
         type: boolean
         default: false
 
+env:
+  PDM_VERSION: 2.20.1
+
 jobs:
   build_wheel_sdist:
     runs-on: ubuntu-22.04
@@ -24,9 +27,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install packaging tools
-        run: |
-          pip install --upgrade pdm
+      - name: Setup PDM
+        uses: pdm-project/setup-pdm@v4
+        with:
+          version: ${{ env.PDM_VERSION }}
 
       - name: Create packages
         run: |
@@ -141,7 +145,9 @@ jobs:
         shell: bash
         run: |
           $PYTHON_CMD -m pip install --upgrade pip
-          $PYTHON_CMD -m pip install --upgrade pdm
+          # We do not install pdm using setup-pdm because we want to use $PYTHON_CMD for
+          # our interpreter
+          $PYTHON_CMD -m pip install --upgrade pdm==$PDM_VERSION
           pdm sync --group tests --group standalone
 
       - name: Prepare macOS secrets
